examples/errors/part2_semantic1_supported_operators_invalid.lya
dcl a chars[10] = "Hello" + "World"; // Ok
dcl b chars[10] = "Hello" * "World"; // Error (unsupported op *)